Fixing arrow positioning for results on mobile.

--- a/public/styles/form.scss
+++ b/public/styles/form.scss
@@ -266,8 +266,8 @@
     .results-container{
       width: 300px;
       .left-arrow__container{
-        // top: 175px;
-        // left: 5px;
+        top: 175px;
+        left: 5px;
         width: 40px;
         height: 40px;
         .left-arrow{
@@ -275,8 +275,8 @@
         }
       }
       .right-arrow__container{
-        // top: 175px;
-        // right: 5px;
+        top: 175px;
+        right: 5px;
         width: 40px;
         height: 40px;
         .right-arrow{
